--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
 <body>
     <h1>BIENVENIDOS A LA MEJOR TIENDA DE ROPA</h1>
+    <header>
+        <nav>
+            <h1 class="logo">MiTienda</h1>
+            <ul class="nav-links">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Tienda</a></li>
+                <li><a href="#">Novedades</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
 
