--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>BIENVENIDOS A LA MEJOR TIENDA DE ROPA</h1>
+    <h1>ERROR PUSH</h1>
     <header>
         <nav>
             <h1 class="logo">MiTienda</h1>
